source/blender/sequencer/intern/strip_add.cc
@@ -211,8 +211,9 @@ void SEQ_add_image_init_alpha_mode(Strip *strip)
 
     /* Initialize input color space. */
     if (strip->type == STRIP_TYPE_IMAGE) {
-      ibuf = IMB_loadiffname(
-          filepath, IB_test | IB_alphamode_detect, strip->data->colorspace_settings.name);
+      ibuf = IMB_loadiffname(filepath,
+                             IB_test | IB_multilayer | IB_alphamode_detect,
+                             strip->data->colorspace_settings.name);
 
       /* Byte images are default to straight alpha, however sequencer
        * works in premul space, so mark strip to be premultiplied first.
@@ -255,7 +256,8 @@ Strip *SEQ_add_image_strip(Main *bmain, Scene *scene, ListBase *seqbase, SeqLoad
   char file_path[FILE_MAX];
   STRNCPY(file_path, load_data->path);
   BLI_path_abs(file_path, BKE_main_blendfile_path(bmain));
-  ImBuf *ibuf = IMB_loadiffname(file_path, IB_rect, strip->data->colorspace_settings.name);
+  ImBuf *ibuf = IMB_loadiffname(
+      file_path, IB_rect | IB_multilayer, strip->data->colorspace_settings.name);
   if (ibuf != nullptr) {
     /* Set image resolution. Assume that all images in sequence are same size. This fields are only
      * informative. */
